@@ -29,6 +29,7 @@ Unreleased Version 2.3.0-pre
  * Feature: Allow locking layer positions to avoid accidentally moving them. Thanks Athena for suggesting.
  * Feature: Increase canvas size limit to up to 1 million pixels as long as the total canvas size doesn't exceed 1073676289 pixels (32767 squared). Previously each dimension was limited to 32767 instead. Thanks johannesCmayer and yvantot for suggesting.
  * Feature: A Drawpile 2.2 compatibility mode, allowing you to join sessions hosted with the previous version.
+ * Feature: Add shortcuts that switch tools and deselect in a single action. Thanks Bonbli for suggesting.
 
 Unreleased Version 2.2.3-pre
  * Fix: Disable audio playback under 32 bit Windows, since it just crashes.
